test_case/rust-lang_rust/52488_407629100.rs
plain
[00:42:20] ....................................................................................................
[00:42:23] ....................................................................................................
[00:42:26] ....................................................................................................
[00:42:28] ....................................................................................................
[00:42:31] ...........................FF.F.....................................................................
[00:42:37] ................................................i...................................................
[00:42:40] ....................................................................................................
[00:42:43] ....................................................................................................
[00:42:46] ...................................................................i................................
---
[00:42:48] 7 error[E0623]: lifetime mismatch
[00:42:48] -   --> $DIR/ex2c-push-inference-variable.rs:17:5
[00:42:48] +   --> $DIR/ex2c-push-inference-variable.rs:16:13
[00:42:48] 9    |
[00:42:48] 10 LL | fn foo<'a, 'b, 'c>(x: &'a mut Vec<Ref<'b, i32>>, y: Ref<'c, i32>) {
[00:42:48] 11    |                                   ------------      ------------ these two types are declared with different lifetimes...
[00:42:48] 
[00:42:48] 12 LL |     let z = Ref { data: y.data };
[00:42:48] - LL |     x.push(z); //~ ERROR lifetime mismatch
[00:42:48] -    |     ^^^^^^^^^ ...but data from `y` flows into `x` here
